--- a/styles/main-page/main-page.css
+++ b/styles/main-page/main-page.css
@@ -9,7 +9,7 @@
     height: var(--full-viewport-height);
     color: white;
     font-family: var(--main-font);
-    position: relative;
+    /* position: relative; */
     /* background-image: url('../../images/login-registration-overlay.webp');
     background-repeat: no-repeat;
     background-position: center;
@@ -279,22 +279,4 @@
         flex-direction: column;
     } */
 
-}
-
-.overlay {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: var(--full-viewport-height);
-    background-image: url('../../images/login-registration-overlay.webp');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-
-.overlay-content {
-    position: absolute;
-    top: 0;
-    left: 0;
 }
