--- a/styles/authorization-pages/login-registration.css
+++ b/styles/authorization-pages/login-registration.css
@@ -1,22 +1,32 @@
 .page {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     font-family: var(--main-font);
-    background-image: url(../../images/login-registration-overlay.webp);
+    /* background-image: url(../../images/login-registration-overlay.webp);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: cover; */
 }
 
-.page::after {
+/* .page::after {
     content: '';
     position: absolute;
     z-index: -1;
     background-color: rgba(0 0 0 / 0.5);
     inline-size: 100%;
     block-size: 100%;
+} */
+
+.overlay {
+    height: 100vh;
+}
+
+.authorization-window {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    backdrop-filter: brightness(0.5);
 }
 
 .window {
