--- a/styles/contacts-page/contacts-page.css
+++ b/styles/contacts-page/contacts-page.css
@@ -1,11 +1,11 @@
 .page {
     color: white;
     font-family: var(--main-font);
-    background-image: url('../../images/login-registration-overlay.webp');
+    /* background-image: url('../../images/login-registration-overlay.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: fixed; */
 }
 
 .header {
