--- a/styles/services-page/services-page.css
+++ b/styles/services-page/services-page.css
@@ -1,13 +1,14 @@
 @import url('../tagline/tagline.css');
 
 .page {
+    /* height: var(--full-viewport-height); */
     color: white;
     font-family: var(--main-font);
-    background-image: url('../../images/login-registration-overlay.webp');
+    /* background-image: url('../../images/login-registration-overlay.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: fixed; */
 }
 
 .header {
