--- a/styles/authorization-pages/login-registration.css
+++ b/styles/authorization-pages/login-registration.css
@@ -30,6 +30,7 @@
 }
 
 .window {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,6 +39,19 @@
     border-radius: 20px;
     padding: 50px var(--window-padding);
     background-color: rgba(255 255 255 / 0.9);
+}
+
+.exit-button {
+    position: absolute;
+    top: 25px;
+    left: 20px;
+    width: 30px;
+    height: 30px;
+    background-image: url('../../images/exit.webp');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    transform: rotateY(180deg);
 }
 
 form {
